added median initial prices to features, added quick script to send price/clusters to website database

--- a/data_analysis/scratch.ipynb
+++ b/data_analysis/scratch.ipynb
@@ -2,166 +2,129 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# %load http://scikit-learn.org/stable/_downloads/randomized_search.py\n",
-    "\"\"\"\n",
-    "=========================================================================\n",
-    "Comparing randomized search and grid search for hyperparameter estimation\n",
-    "=========================================================================\n",
-    "\n",
-    "Compare randomized search and grid search for optimizing hyperparameters of a\n",
-    "random forest.\n",
-    "All parameters that influence the learning are searched simultaneously\n",
-    "(except for the number of estimators, which poses a time / quality tradeoff).\n",
-    "\n",
-    "The randomized search and the grid search explore exactly the same space of\n",
-    "parameters. The result in parameter settings is quite similar, while the run\n",
-    "time for randomized search is drastically lower.\n",
-    "\n",
-    "The performance is slightly worse for the randomized search, though this\n",
-    "is most likely a noise effect and would not carry over to a held-out test set.\n",
-    "\n",
-    "Note that in practice, one would not search over this many different parameters\n",
-    "simultaneously using grid search, but pick only the ones deemed most important.\n",
-    "\"\"\"\n",
-    "print(__doc__)"
+    "import requests\n",
+    "import json\n",
+    "from pprint import pprint as ppimport "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "from time import time\n",
-    "from operator import itemgetter\n",
-    "from scipy.stats import randint as sp_randint\n",
-    "\n",
-    "from sklearn.grid_search import GridSearchCV, RandomizedSearchCV\n",
-    "from sklearn.datasets import load_digits\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "# get some data\n",
-    "iris = load_digits()\n",
-    "X, y = iris.data, iris.target\n",
-    "\n",
-    "# build a classifier\n",
-    "clf = RandomForestClassifier(n_estimators=20)"
+    "site = 'http://store.steampowered.com/api/appdetails?appids=57690'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "r = requests.get(site)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "the_json  = r.json()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RandomizedSearchCV took 2.12 seconds for 20 candidates parameter settings.\n",
-      "Model with rank: 1\n",
-      "Mean validation score: 0.935 (std: 0.009)\n",
-      "Parameters: {'bootstrap': False, 'min_samples_leaf': 1, 'min_samples_split': 7, 'criterion': 'entropy', 'max_features': 7, 'max_depth': None}\n",
-      "\n",
-      "Model with rank: 2\n",
-      "Mean validation score: 0.927 (std: 0.013)\n",
-      "Parameters: {'bootstrap': False, 'min_samples_leaf': 2, 'min_samples_split': 7, 'criterion': 'gini', 'max_features': 3, 'max_depth': None}\n",
-      "\n",
-      "Model with rank: 3\n",
-      "Mean validation score: 0.914 (std: 0.018)\n",
-      "Parameters: {'bootstrap': False, 'min_samples_leaf': 6, 'min_samples_split': 7, 'criterion': 'entropy', 'max_features': 8, 'max_depth': None}\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{u'currency': u'USD', u'initial': 1999, u'final': 1999, u'discount_percent': 0}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Utility function to report best scores\n",
-    "def report(grid_scores, n_top=3):\n",
-    "    top_scores = sorted(grid_scores, key=itemgetter(1), reverse=True)[:n_top]\n",
-    "    for i, score in enumerate(top_scores):\n",
-    "        print(\"Model with rank: {0}\".format(i + 1))\n",
-    "        print(\"Mean validation score: {0:.3f} (std: {1:.3f})\".format(\n",
-    "              score.mean_validation_score,\n",
-    "              np.std(score.cv_validation_scores)))\n",
-    "        print(\"Parameters: {0}\".format(score.parameters))\n",
-    "        print(\"\")\n",
-    "\n",
-    "\n",
-    "# specify parameters and distributions to sample from\n",
-    "param_dist = {\"max_depth\": [3, None],\n",
-    "              \"max_features\": sp_randint(1, 11),\n",
-    "              \"min_samples_split\": sp_randint(1, 11),\n",
-    "              \"min_samples_leaf\": sp_randint(1, 11),\n",
-    "              \"bootstrap\": [True, False],\n",
-    "              \"criterion\": [\"gini\", \"entropy\"]}\n",
-    "\n",
-    "# run randomized search\n",
-    "n_iter_search = 20\n",
-    "random_search = RandomizedSearchCV(clf, param_distributions=param_dist,\n",
-    "                                   n_iter=n_iter_search)\n",
-    "\n",
-    "start = time()\n",
-    "random_search.fit(X, y)\n",
-    "print(\"RandomizedSearchCV took %.2f seconds for %d candidates\"\n",
-    "      \" parameter settings.\" % ((time() - start), n_iter_search))\n",
-    "report(random_search.grid_scores_)\n",
-    "\n",
-    "# use a full grid over all parameters\n",
-    "param_grid = {\"max_depth\": [3, None],\n",
-    "              \"max_features\": [1, 3, 10],\n",
-    "              \"min_samples_split\": [1, 3, 10],\n",
-    "              \"min_samples_leaf\": [1, 3, 10],\n",
-    "              \"bootstrap\": [True, False],\n",
-    "              \"criterion\": [\"gini\", \"entropy\"]}"
+    "the_json[\"57690\"]['data'][u'price_overview']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_current_price(appid_in):\n",
+    "    site = 'http://store.steampowered.com/api/appdetails?appids=%d' % appid_in\n",
+    "    r = requests.get(site)\n",
+    "    the_json  = r.json()\n",
+    "    \n",
+    "    data = the_json[str(appid_in)]['data'][u'price_overview']\n",
+    "    disc = data['discount_percent']\n",
+    "    ip =  \"$%0.2f\" % (data['initial'] * .01)\n",
+    "    fp =  \"$%0.2f\" % (data['final'] * .01)\n",
+    "    discount_percent = \"%d%%\" % (disc)\n",
+    "    if  disc > 0:\n",
+    "        out_str = 'is currently on sale for %s at %s off at.' % (fp, disc)\n",
+    "    else:\n",
+    "        out_str = 'is currently %s' % fp\n",
+    "    return out_str\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "out_str = get_current_price(57690)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GridSearchCV took 20.60 seconds for 216 candidate parameter settings.\n",
-      "Model with rank: 1\n",
-      "Mean validation score: 0.932 (std: 0.013)\n",
-      "Parameters: {'bootstrap': False, 'min_samples_leaf': 1, 'min_samples_split': 3, 'criterion': 'gini', 'max_features': 10, 'max_depth': None}\n",
-      "\n",
-      "Model with rank: 2\n",
-      "Mean validation score: 0.930 (std: 0.009)\n",
-      "Parameters: {'bootstrap': False, 'min_samples_leaf': 1, 'min_samples_split': 1, 'criterion': 'entropy', 'max_features': 10, 'max_depth': None}\n",
-      "\n",
-      "Model with rank: 3\n",
-      "Mean validation score: 0.929 (std: 0.011)\n",
-      "Parameters: {'bootstrap': False, 'min_samples_leaf': 3, 'min_samples_split': 1, 'criterion': 'entropy', 'max_features': 10, 'max_depth': None}\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'is currently $19.99'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# run grid search\n",
-    "grid_search = GridSearchCV(clf, param_grid=param_grid)\n",
-    "start = time()\n",
-    "grid_search.fit(X, y)\n",
-    "\n",
-    "print(\"GridSearchCV took %.2f seconds for %d candidate parameter settings.\"\n",
-    "      % (time() - start, len(grid_search.grid_scores_)))\n",
-    "report(grid_search.grid_scores_)"
+    "out_str"
    ]
   }
  ],
