updated comments in clean_steam_data

--- a/data_analysis/streamline_pipeline.ipynb
+++ b/data_analysis/streamline_pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
        "'/home/ryan/Documents/insight_projects/steam_prices/data_analysis'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -186,9 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -198,11 +198,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'best_est' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-bc8aee20b53a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my_prediction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbest_est\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_set\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Xall'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'best_est' is not defined"
+     ]
+    }
+   ],
    "source": [
     "y_prediction = best_est.predict(test_set['Xall']) "
    ]
@@ -251,14 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def plot_confusion_matrix(cm, title='Confusion matrix', cmap=plt.cm.Blues):\n",
-    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap,vmin=0, vmax=1)\n",
     "    plt.title(title)\n",
     "    plt.colorbar()\n",
     "    plt.tight_layout()\n",
@@ -333,6 +345,110 @@
    "source": [
     "'''report rate for each quadrant'''\n",
     "cm_normalized"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "<h4> Simulation to demonstrate base rate if classification was purely random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sim_sequence(p, in_len):\n",
+    "    sequence = list()\n",
+    "    for i in xrange(in_len):\n",
+    "        sequence.append(np.random.binomial(1,p))\n",
+    "    return sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x7f459fbd5e90>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWIAAAEpCAYAAACpwyjVAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHe9JREFUeJzt3XmYXFWB/vFvNaAEAxhHRxIZFYy+gqIQl2hEdhWXB1Ez\no8/jT9lGEeNMdNCRRRkVF0bFYEZcgoKj4oIyRFGEjIogEdEEw0TnyQvIoiRBEnAQ2YTQvz/u7VAU\n3dVdye2+1bnvh6eeyr331OkTom8Op87SGhwcJCIi6jNQdwMiIpouQRwRUbMEcUREzRLEERE1SxBH\nRNQsQRwRUbOt625ARMRkJOlZwHnAp2yf3vHsIOAjwAbgAtsf7lZXesQRET2StB1wKnDRCEU+DbwW\neBHwUkm7dasvQRwR0bt7gVcBf+x8IGlX4Dbbq20PAhcAB3arLEEcEdEj2xts3zvC452AdW3XtwDT\nu9WXII6IqFbnvhGt0T7QmC/rprxiYTbV2EJdc/bRdTchxsnO0x45aoiN1ZS93tFTBtz9689s6s9e\nQ9ErHrIzsLrbB9IjjohmaA309hpjrZ03bN8I7CDpSZK2Bl4JLOlWSWN6xBHRcK3KOtdIegFwBvC3\nwP2S3gacBVxnezFwDPCNsvg3bV/brb4EcUQ0w9h7uaOy/Qtgjy7PfwbMGWt9CeKIaIYKe8RVSxBH\nRDNU2COuWoI4IpphYKu6WzCiBHFENEOGJiIiapahiYiImqVHHBFRs/SIIyJqlh5xRETN0iOOiKhZ\ngjgiomYDGZqIiKhXesQRETXLl3URETVLjzgiombpEUdE1KziTX8kLQBmU5xRN9/2srZnrwZOpDjt\n+Zu2T+/atEpbFhHRryo8KknSvsBM23OAo4CFbc8GgP8AXg7sAxwi6Qnd6ksQR0QztFq9vbo7ADgP\nwPYqYJqkqeWzxwL/Z/tW24PAT4GDulWWoYmIaIZqv6zbCVjedr0OmA5cU/56e0kzgRuBF1OE8YjS\nI46IZqi2R/yw2inGiil7wUcBXwa+BdzMMKc9t0uPOCKaodoe8RqKXvGQGcDaoQvbPwF+AiDpDOD6\nbpUliCOiGaoN4iXAB4FFkmYBq23fOfRQ0gXAm4AHgAOB93arLEEcEc1Q4Txi25dLWi5pKbABmCfp\nMOB224uBMyjCemvgRNu3dasvQRwRzVDxyjrbx3fcWtn27DzKWRVjkSCOiGbIyrqIiJplr4mIiJql\nRxwRUa9Wgjgiol6tnNAREVGv9IgjImqWII6IqFmCOCKiZgniiIi69W8OJ4gjohnSI46IqFmCOCKi\nZgniiIiaJYgjIurWvzmcII6IZqi6RyxpATCb4qy6+baXtT2bB7yRYtP4Zbbf1a2u/t0XLiKiQgMD\nAz29upG0LzDT9hyKg0IXtj3bEXg3sLftFwO7S5rdtW2b/buLiJgMWj2+ujuA8gQO26uAaZKmls/u\nLV/bS9oa2A64tVtlCeKIaIRWq9XTaxQ7AevbrtcB0wFs3wN8APgdcANwme1ru1WWII6IRqg4iB9W\nPcVYMZJ2AN4HPA3YBXiRpD26fThBHBGNUHEQr6HoFQ+ZAawtf70bcJ3t22zfB1wGPLdbZQniiGiE\nioN4CTAXQNIsYLXtO8tnNwC7Sdq2vH4ucE23yjJ9LSKaocLZa7Yvl7Rc0lKKKWrzJB0G3G57saRP\nABdLuh9YavuybvUliCOiEaqeR2z7+I5bK9ueLQIWjbWuBHFENEKWOEdE1CxBHBFRt/7N4f4MYklP\nppgMvaftleW9wynm6Z0DLACeD9wH/BF4u+2bamlsREwK/dwj7ufpa78FTmm7HizfFwA32Z5le3ZZ\n5sJyKWFExLDGeUHHZunXIB4ElgN3SNq/7f72wMHAR4du2P45cAXw6gltYURMKlVu+lN52yb0p/Xu\nfcBH2q63AlbZfqCj3ApAE9aqiJh8qt30p1L9GsQtgHKjjCslvb68P0gRxsOV3zBBbYuISShDE5vn\nQ8BxwDbAA4AkbdNRZi+KMeWIiGEliDeD7VuAxcDRwB3A+RRbzAEgaQ6wJ/CDOtoXEZNDq9XbayL1\n60yDQR6cJQHwSeCY8t47gVMkraDYfPkWYK7twYfVEhFR6ufpa30ZxLZvBI5su76Th245d+yENyoi\nJrU+zuH+DOKIiKqlRxwRUbM+zuEEcUQ0w8BAtUksaQEwm+K7q/m2l5X3ZwBntxXdFXiv7W+OVFeC\nOCIaocoesaR9gZm250h6OnAmMAfA9hpg/7LcVsBPge91q6/vp69FRFSh4nnEBwDnAdheBUyTNHWY\nckcA37F9V7fKEsQR0QgVzyPeCVjfdr0OmD5MuaOAL41WWYYmIqIRxnkjnxYPXfuApBdS7I3zl9E+\nnCCOiEaoeNbEGh66tmEGsLajzKuA/x5LZRmaiIhGqHiMeAkwF0DSLGB1ufCs3XOBq8bStgRxRDRC\nlWPEti8HlktaCpwGzJN0mKRD24pNp9iCYVQZmoiIRqh6ZZ3t4zturex4/qyx1pUgjohGyMq6iIia\nZa+JiIia9XEOJ4gjohnSI46IqFkf53CCOCKaIT3iiIia9XEOJ4gjohmq3o+4SgniiGiEDE1ERNQs\nQRwRUbM+zuEEcUQ0Q3rEERE16+McThBHRDOkRxwRUbM+zuEEcUQ0w0DFSSxpATCb4qy6+baXtT37\nO+AbwDbAlbaP6dq2SlsWEdGnqjyhQ9K+wEzbcyhOal7YUeRU4BO2ZwMbymAeUYI4Ihqh4jPrDgDO\nA7C9CpgmaSqApAFgb+D88vk7bP+hW2UjDk1I2mfsv8WHsn3ppn42ImI8VLzCeSdgedv1Oooz6q4B\nHgfcASwoDxb9me0TulXWbYz4p5vYwEFgq038bETEuBjnWRMtiuwb+vUTKA4VvRH4gaRX2L5gpA93\nC+IPbWKDBkcvEhExsSr+sm4NRa94yAxgbfnr9cCNtq8HkPRj4BlA70Fs+wO9tkzSo4CpvX4uImK8\nVTw0sQT4ILCoHH5YbftOANv3S7pO0kzb1wLPAb7etW2VNg1eB1xZcZ0REZutyi/rbF8OLJe0lGII\nYp6kwyQdWhZ5J3BW+fz/bJ/frb6e5hFL2hk4DHjSMJ+dAhwIbNtLnRERE6HqIWLbx3fcWtn27HfA\ni8da15iDWNLTgCuAHbsUux84eax1RkRMlKoXdFSplx7xycADwNsovgn8ITAPuA7YB3gT8BbbF1Xd\nyIiIzdXHOdzTGPFs4DTbiyh6xgC/tX2R7ROBVwJfkzSn6kZGRGyuihd0VKqXIB6arAywoXx/5NBD\n2yuBz7Lp094iIsZNlUucq9ZLEN9OMVcO23cA9wAzO8pcAzy3mqZFRFRnoNXq6TWhbeuh7KXAuyQd\nWF5fTTFl4zFtZQ6mCOiIiL7S6vE1kXr5su7fgUuA9wA/BhYBnwGulnQV8ETgKcDXqm5kRMTm6ueN\n4cfcI7b9K2AO8JXy1ueAjwCPAPYHdgG+TTGROSKirwy0entNpJ4WdNheAawofz0IvF/SB4HHArfa\nvq/6JkZEbL5+7hFv9gkdtu8Hbq6gLRER42Zgoru5PehlZd1ZjG1ntZbtIza9SRER1evjHO6pR3xY\nD2UTxBHRV7aUoYmRVsxNAZ5GsfT5lxRbw0VE9JX+jeEegtj2L7o8vljSmcDPgDcAn9rchkVEVKmf\nN/2pbD/icsbEVyh6xhERfaWflzhv9qyJDvcCO1dcZ0TEZqt6jFjSAorN0AaB+baXtT27Afg9D+7L\n80bba0aqq7IgLjeNPxpYXVWdERFVqTKHJe0LzLQ9R9LTgTN56Pdog8DBtu8aS329TF+7npGnrz2S\n4iC9FnDSWOuMiJgoFY8RHwCcB2B7laRpkqba/ktbmTH/wF7GiFtl+eFedwFLgWOBj/VQZ0TEhKh4\njHgnitOah6yj2Cq43ecl/UzSqJnYy6yJJ4+1bEREvxnnecQtHjpi8H7gQuBPwGJJr7N97kgfHnOP\nWNJJ5VhItzKvk5SpaxHRd0b6z/mRXqNYQ9ErHjIDWDt0Yftrttfb3gBcAOwxWtvG6gPA7qOUeSrw\n1h7qjIiYEBUflbQEmAsgaRaw2vad5fWOki6RNKUsuw9tJzwPp+vQhKRXA4e23Zon6VUjFN8WeDlw\n92i/g4iIibZ1ZasmwPblkpZLWkoxRW2epMOA220vlnQu8HNJfwF+3W1YAkYfI94A7ArMKq/3H6X8\n3cBxo/4uIiImWNVjxLaP77i1su3ZQmDhWOvqGsS2vw98X9IAcD/wdooB6OFsAG7OnsQR0Y8m/e5r\nth+QdCTwE9u/H+c2RURUro+3mujpqKQvAwOSPidpl/Znkg6R9MVydV1ERN/ZIk5xlvQUim0ujwae\n0PF4KnAksELSk6prXkRENSqevlZ528bq5PL9ZRSr6Day/XWKzS/uA06ppmkREdXp593XegnilwGf\ntP3f5cGhD1Ge8rwAOLiqxkVEVKWfhyZ62X1tW+CmUcqsLctFRPSVLeLLOsDAS0Yp81rg2k1vTkTE\n+Bho9faaSL30iL8IfEbSIPBV4Drgr8CjgWcCRwEvBf6l6kZGRGyufj4qqZcg/hzFXhNvBw4focyX\n6GE1SUTEROnjHO5pG8xB4B2SzgBeT9ELngLcAtwALLb9K0kzKHYmiojoG1v1cRL3fFSS7auAq9rv\nSdoKeKWk8ylmVzyimuZFRFRj0i9xHkm5wu4oiqGKGeXtrtu9RUTUYYsKYknbAK8B3kJxblOLYsOf\nc4H/sH1ppS2MiKjAOJ/QsVl6OTxUFOH7ZuCx5e0/Ao8HDrd9dvXNi4ioxqTtEUvaFvh7igDeu7x9\nG/B5iils64CryWbwEdHnqu4QS1pAsbXDIDDf9rJhynwMeIHtrnu5j9YjXgvsSBG05wJnAz8Y2nNY\n0szemx8RMfGqnEcsaV9gpu055VmeZwJzOsrsDryYYr1F97aN8nxH4FbgvcDbbC/Oxu8RMRlVvLLu\nAOA8ANurgGmSpnaU+QRwAsX3aN3bNsrzU8v3hcBqSYslzZWU6WkRMalUvPvaTsD6tut1wPShC0mH\nAz8BbhxL27oGse33UOw9/EbgcuAQ4Bzg5nJhx95dPh4R0TcGaPX06lGLYqwYSY8B/h9wGmPoDRdt\nG4Xtv9r+RjnY/HTgUxTT1Y6iGBcBeJmkv+m15RERE6XiHvEail7xkBkU36lBccjyTsBlwH8BsySd\nShc9bURv+2rb7wZ2puglD80Zfgvwh/K4pD16qTMiYiJUPEa8BJgLIGkWsNr2nQC2z7X9TNsvpFhz\ncaXtY7u2bVN+Q7bvLXvJ+wG7UWwIfxflcUmbUmdExHiqcmN425cDyyUtpRiCmCfpMEmHdhTdOGTR\nzWYtcS4bZOBYSScArwPeurl1RkRUbauKV3TYPr7j1sO2d7B9A8UMi642O4jbfuC9wNfLV0REX+nj\nFc7VBXFERD+b6JOZe5EgjohG2CI2/YmImMz6N4YTxBHREFvKmXUREZNW/8ZwgjgiGqKPO8QJ4oho\nhnxZFxFRs0xfi4ioWXrEERE1698YThBHREOkRxwRUbOtEsQREfXq3xhOEEdEQ1TdIZa0AJhNsd/w\nfNvL2p69hWJ/9g3AVbbndaurn2d0RERUpsoz6yTtC8y0PYfi2LiFbc+2A14P7G17b+Dpkl7Yrb70\niCOiESruER8AnAdge5WkaZKm2v6L7buAg2BjKO/Ig+fZDSs94ohohFaP/4xiJ2B92/U6YHp7AUnH\nAdcC3ypP6hhRgjgiGqHiU5wfVj0dZ9PZPgXYFXi5pDndPpwgjohGqHKMGFhD0SseMoNy+EHSYyTt\nB2D7HuCHwIu6ty0iogEq7hEvAeYCSJoFrLZ9Z/lsG+BLkh5VXj8fWNWtsnxZFxGNUOWXdbYvl7Rc\n0lKKKWrzJB0G3G57saQPARdLuh9YYfv8bvUliCOiEcbwBVxPbB/fcWtl27P/BP5zrHUliCOiEQb6\neGldgjgiGiFn1kVE1KzqoYkq1RrEkk4EtrN9Ynk9AFwJ/A7YA1jdVvwK28dJ2gM4DdgKmAr8yPZx\nE9vyiJhsMjQxslOBFZJOt70GOAK4HLgZ+LHtzw7zmYXAu20vl9QCvitpL9u/nrhmR8Rkkx7xCGzf\nI+lk4MOS3gEcC+wDzGPkXet2BB5dfn4QOGQi2hoRk1sfDxHXv6DD9tnAbsAi4Czb60f5yAeAb0u6\nSNKxkqaPUj4iglaPr4lUexCXTgD2pxj7heLfw3xJF7e9DgWw/T1gF+BLwLOB35TjxhERIxpotXp6\nTaS6x4iHXA+ssX1feT0InDbcGLGkKbZvB84BzpF0EvAa2iZTR0R06uORib7pEQ/nYf/eJO0AuGM4\nYmeKWRYRESPr47GJfukRQ8cWchRDE3Pbrm+1PVfS0cB3JP2Vov1XlOPMEREj6udZE63Bwc782zJN\necXCZvxGG+ias4+uuwkxTnae9sjK0vOX193eUwY8f9cdJyy5+6lHHBExbvq3P5wgjoim6OMkThBH\nRCNk05+IiJpVHcOSFgCzKSYazLe9rO3Z/sBHKTaNN/CP5UrgYfXz9LWIiOpUOH1N0r7ATNtzgKMo\n9sBptwiYa3tvYHvg4G71JYgjohFaPf4zigOA8wBsrwKmSZra9vw5tod2j1wHPKZbZQniiGiEig8P\n3Qlo3xdnHbBxoZntPwOUi89eClzQrbKMEUdEI4zzV3UtOhalSfpb4HvAMbb/1O3DCeKIaIZqk3gN\nRa94yAxg7dBFuR3DBcAJtn80WmUZmoiIRqh4jHgJMBdA0ixgte07256fCiywvWRMbcsS55jsssR5\ny1XlEueVN/2lpwzYY+epXX+2pI9RHGSxgeIwi1nA7cBFwJ8oThsa8nXbZ4xUV4YmIqIRqh4jtn18\nx632rXi37aWuBHFENEP/LqxLEEdEM/TzNpgJ4ohohD7eaiJBHBHNkCCOiKhZhiYiImqWHnFERM36\nOIcTxBHREH2cxAniiGiEjBFHRNQsY8QRETXr4xxOEEdEQ/RxEieII6IRMkYcEVGzjBFHRNSsj3M4\nQRwRzdCquEssaQEwm+Ksuvm2l7U92xZYBOxm+3mj1ZWjkiKiEao8xVnSvsBM23OAo4CFHUU+Dvxy\nrG1LEEdEI7R6fI3iAOA8ANurgGmSprY9Px44f6xtSxBHRCNU2SOmOMF5fdv1OmD60EV5kOiYx0Iy\nRhwRDTGuX9e1KMaKN0mCOCIaoeLv6tZQ9IqHzADWdpQZczBnaCIiGqHiMeIlwFwASbOA1eVwROeP\nHJMEcUQ0QpVjxLYvB5ZLWgqcBsyTdJikQwEk/Qi4EHiGpJWSjuhWX4YmIqIRql7ibPv4jlsr254d\n1EtdCeKIaIY+XlqXII6IRujjHE4QR0QzZNOfiIiaZRvMiIiapUccEVGzBHFERM0yNBERUbN+7hFn\nZV1ERM3SI46IRujnHnGCOCIaIWPEERE1S484IqJmfZzDCeKIaIg+TuIEcUQ0QsaIIyJqVvUYsaQF\nwGyKI5Hm217W9uwg4CPABuAC2x/uVlfmEUdEI1R5VJKkfYGZtucARwELO4p8Gngt8CLgpZJ261Zf\ngjgiGqHVavX0GsUBwHkAtlcB0yRNBZC0K3Cb7dW2B4ELgAO7VZYgjohGqPLMOooTnNe3Xa/jwVOd\ndyqvh9wCTO9WWWPGiO++4J/7d6Q+IsbdtluP67d13eoe9eemRxwR0bs1PNgDBpgBrC1/vbrj2c7l\nvREliCMiercEmAsgaRaw2vadALZvBHaQ9CRJWwOvLMuPqDU4ODjO7Y2I2PJI+hiwD8UUtXnALOB2\n24slvRj497Lod2x/qltdCeKIiJplaCIiomYJ4oiImiWIIyJq1ph5xFsaSU8GfgfsaXtlee9winXv\n5wALgOcD9wF/BN5u+6ZaGhujknQisJ3tE8vrAeBKij/jPXjo9KcrbB8naQ/gNGArYCrwI9vHTWzL\nowoJ4sntt8ApFNNjoAhhKEL4JttvA5A0B7hQ0p6275/4ZsYYnAqskHS67TXAEcDlwM3Aj21/dpjP\nLATebXu5pBbwXUl72f71xDU7qpChiclrEFgO3CFp/7b72wMHAx8dumH758AVwKsntIUxZrbvAU4G\nPixpO+BY4P3l45FWZu0IPLr8/KDtQxLCk1OCePJ7H8V2e0O2AlbZfqCj3ApAE9aq6Jnts4HdgEXA\nWbbXj/KRDwDflnSRpGMldd3PIPpXgnjyagHYvha4UtLry/uDFGE8XPkNE9S22HQnAPtTjP1C8ec2\nX9LFba9DAWx/D9gF+BLwbOA35bhxTDIZI94yfAi4CDgdeACQpG1s39dWZi/g3DoaFz25HljT9mc3\nCJw23BixpCm2b6f4cvYcSScBrwFWTlhroxLpEW8BbN8CLAaOBu4Azqf4z1Zg45d1ewI/qKN9sdke\nNkYsaQfAHcMRO1PMsohJJj3iyWuQB2dJAHwSOKa8907gFEkrgHsp9kOdW25SHf2v889pvqS5bde3\n2p4r6WjgO5L+SvH/5SvKceaYZLLXREREzTI0ERFRswRxRETNEsQRETVLEEdE1CxBHBFRswRxRETN\nEsQxqUj6qaQH2q73k/RAuaqsb0g6vGzXYXW3JfpfFnTEiMr9jc8c5tEDwHrg58CptpdOZLt46IKH\n31Ccpvu/vVYiaSrwbmBBuVR4PGSifowqQRxj8TWKJdRDtqPYJexo4BBJb7b99ToaVu5Q9l+b+PHn\nASdR/GUzXkEcMaoEcYzFb2w/LOwknQFcBXxa0jnDbTo/zOZD/eR55ftI+/1GTIgEcWwy2zdIugR4\nFfBMSXtS9C7fBMyiOGXiu+U7kh5L0QM9BJgO/BlYCnzU9i/b65a0F8X+GbMpjntaSrFZOh3l9gN+\nAnzQ9gfb7j+FYqP1Ayg2T/8dxdaSX7Q9KOkG4Ill8eslYXug7fNHAm8DnkExFHM1cBZwevueHZIe\nBXwM+Pvy51xbtjtizBLEsbnuLt/b/7d0KPAE4J+AGwAkTaM4+udvgC9QjO3uTLFR0aWSXm774rLs\nE4GLKb5M/jRgiv12L6TYXW447eH4FIrz3m6lOKnkTxTbQ34BeBrwHoqQ/Vdgv7IN69o+fyrwLorh\nmM8B21D85bGwbMdb2n7uV8vf72Lg+8BjgPfy0DPmIrpKEMcmK4/0eRFwF0WwPrN8tC8w0/af24q/\nn2IT8xfa/lVbHV+lOHtvAcVWnVDsHrcDcKTtL7eV/TXwFUb/AuwTwLbAS2wPbQv5VUmXAe+U9Cnb\nF0p6Q/nsh7Z/X/6MZ1OE8Om2/6mtzkWSvg0cVZ4rt0LSsyhC+BLbr21r55nAqlHaGLFRgjjGYoqk\nR7ddb0vRs/w3YAZwku17pI0nMS3pCGGA11PMbLi6o667gJ8Br5K0Yzl74UCK00S+1VHHNyg2v586\nUkPLmRCvBH7RFsJD3gxMoxgSGck/lO/ndLQTio31X0fRi15RthPgm+2FbN8m6Rzg7V1+TsRGCeIY\ni38rX53WA8faXtBx//r2C0k7UowJT6cYJhjOIMWY7UpgV2Ct7bvbC9jeIOkaitNGRvI0iqGE6zof\n2H7YvWHsXr5f0qWdf1f+etfy/ZphyqVHHGOWII6xWAS0T097gGL8ddUIm813juNuX76voBh2GMmN\n5ft2jDzGevcI94dMKd//Okq5kQy19Q0UR9kPZ235vl35ftcwZUZrZ8RGCeIYi+tsX7oZnx8K5keM\nsZ67KYY/hjPisETplvK9c1hhrIbaep3tZaOUHQrb4do6WjsjNsoS5xh35bjvGuCpkh7X+byc1tbu\nRmC6pEd0lHsE8NRRftxNFD32Zwzzc3Yvlx4/8eEf2+g35fvew3z+UZLaQ3eoB/+UYep55jD3IoaV\nII6J8i2Ksdt/br9ZTmtbIemCtts/Lcu+lod6Iw8OBwyrHFe+CNhd0gs7Hn+c4uj5oeGUDeX7lLYy\n3y7fj+kIXShmY9wiaZe2dkKxxHqj8i+WzrZHjChDEzFRPgy8GjhB0uOBS4HHU8znfRzFYoshpwGH\nA5+XtDvFF2/PppgLvBx4zig/6z0U0+q+K+kTwB8pFp28Avik7T+U5Ya+vPu4pEuBr9r+H0mnUYxl\nL5X0BeB+ipkYrynLXA9g+1eSfgy8TNK3gCUU84iPpJgz/Yre/hVFU6VHHN10nhS9yeVt/wl4AcX0\ns5dQ9ExPpFixdpDtJW1lrynL/A/FarpPAwJeTjEjo2ubbP9v+bMuoVi0cQbFUMVbbf9rW9EvAJcB\nL6OYO7xd+fl/Af6RIoAXlG2eSRHwR3T8uLll/fuV5d5MsbLus2U7s3w6RpVTnCMiapYecUREzRLE\nERE1SxBHRNQsQRwRUbMEcUREzRLEERE1SxBHRNQsQRwRUbMEcUREzf4/423Uip2ZvBYAAAAASUVO\nRK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f45a4907990>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tn = []\n",
+    "tp = []\n",
+    "fn = []\n",
+    "fp = []\n",
+    "for i in xrange(1000):\n",
+    "    simulation_set = sim_sequence(0.1,test_set['yall'].size)\n",
+    "    simulation_set2 = sim_sequence(0.1,test_set['yall'].size)\n",
+    "    cm = confusion_matrix(simulation_set2, simulation_set)\n",
+    "    #cm = confusion_matrix(test_set['yall'], simulation_set)\n",
+    "    np.set_printoptions(precision=2)\n",
+    "    cm_normalized_examp = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "    \n",
+    "    tn.append(cm_normalized_examp[0,0])\n",
+    "    fn.append(cm_normalized_examp[1,0])\n",
+    "    tp.append(cm_normalized_examp[1,1])\n",
+    "    fp.append(cm_normalized_examp[0,1])\n",
+    "\n",
+    "cm_normalized = np.array([[np.mean(tn),np.mean(fp)],[np.mean(fn),np.mean(tp)]])\n",
+    "plt.figure()\n",
+    "plot_confusion_matrix(cm_normalized, title='Normalized confusion matrix')\n",
+    "plt.xticks([1,0])\n",
+    "plt.yticks([0,1])\n",
+    "plt.gca().set_yticklabels(['NO','YES'])\n",
+    "plt.gca().set_xticklabels(['YES','NO'])\n",
+    "xlabel = ['Actual']\n",
+    "plt.xlabel('Predicted', fontsize = 20)\n",
+    "plt.ylabel('Actual',fontsize = 20)\n",
+    "plt.grid(False)\n",
+    "plt.title('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.85  0.15]\n",
+      " [ 0.85  0.15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print cm_normalized"
    ]
   }
  ],
