updated comments in clean_steamdb

--- a/data_analysis/clean_steamdb_data.ipynb
+++ b/data_analysis/clean_steamdb_data.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> clean up and make features from the price time series"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -55,6 +62,7 @@
    },
    "outputs": [],
    "source": [
+    "'''from the steamdb jsons, first convert the raw, unformatted feature data'''\n",
     "list_dict  = {'appid':list(),'fprice':list(),'iprice':list(), 'price_date':list(), 'formatted':list()}\n",
     "for f in steamdb_fnames:\n",
     "    appid = int(f.split('.')[0].split('_')[1])\n",
@@ -106,7 +114,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "'''needs to be converted from a sample occurence to a plot (to do later)'''\n",
     "sample = 2\n",
     "dt = list_dict['price_date'][sample]\n",
@@ -420,7 +427,9 @@
     }
    ],
    "source": [
-    "'''fire sale frequency by date. Most common ones are holiday sales, can be removed'''\n",
+    "'''fire sale frequency by date. Most common ones are holiday sales, can be removed\n",
+    "outliers in the 1000+ count are obvious holiday sales\"\n",
+    "'''\n",
     "#p_bin = (hbins[:-1] - min_ts)  / (60.*60*24)  + 1\n",
     "plt.plot(hbins[:-1],ncount,'b.')\n",
     "plt.ylabel('freq')\n",
@@ -1021,6 +1030,7 @@
     }
    ],
    "source": [
+    "'''plot sale occurence date by appid. Empty bands are removed holiday sales'''\n",
     "fig,ax = plt.subplots(1,1)\n",
     "for i,v in enumerate(no_holiday_sts):\n",
     "    if not v == []:\n",
