removed old, out of date pipeline

--- a/data_analysis/inter_sale_analysis.ipynb
+++ b/data_analysis/inter_sale_analysis.ipynb
@@ -214,7 +214,7 @@
    "outputs": [],
    "source": [
     "def get_ists(in_times):\n",
-    "    '''dirty, assumes that each is a sale, which isnt 100% accurate, but close'''\n",
+    "    '''dirty, assumes that each is a sale, which isnt 100% accurate, but close enough for now'''\n",
     "    '''ists: intersaletimes'''\n",
     "    times = np.array(in_times)\n",
     "    if not np.array(in_times).size == 1:\n",
@@ -310,7 +310,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -387,7 +387,8 @@
     }
    ],
    "source": [
-    "# the histogram of the data\n",
+    "# the histogram of the data, not the abnormal spikes toward the end. \n",
+    "#Those are the holiday sale gaps\n",
     "n, bins, patches = plt.hist(ist_arr * 1000, 18) #x, 50, normed=1, facecolor='green', alpha=0.75)\n",
     "plt.yscale('log', nonposy='clip')\n",
     "plt.xticks(fontsize = 15)\n",
@@ -445,12 +446,13 @@
     "fig,ax = plt.subplots()\n",
     "\n",
     "#use ist_perserved_list\n",
+    "# the solid looking lines are holiday sales when EVERYTHING goes on sale\n",
     "for i,v in enumerate(ist_perserved_list):\n",
     "    y =  np.ones(v.shape) * i\n",
     "    vd = v / (60.*60.*24.)\n",
     "    ax.plot(vd,y, 'b.')\n",
     "\n",
-    "ax.set_ylim([0,500])\n",
+    "ax.set_ylim([0,500]) #just look at the first 500 titles for exploration\n",
     "ax.set_ylabel('individual games', fontsize = 20)\n",
     "ax.set_xlabel('fire sale date', fontsize = 20)\n",
     "ax.set_xticks([])\n",
